[tool.poetry]
name = "fear-greed-index"
version = "0.1.2"
description = "CNN Fear and Greed Index"
authors = ["Didier Rodrigues Lopes <dro.lopes@campus.fct.unl.pt>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/DidierRLopes/fear-greed-index"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
bs4 = "^0.0.1"
matplotlib = "^3.4.2"
Pillow = "^8.2.0"
lxml = "^4.6.3"
Sphinx = "^4.0.2"
sphinx-rtd-theme = "^0.5.2"
m2r2 = "^0.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
