[tool.poetry]
name = "fear-greed-index"
version = "0.1.4"
description = "CNN Fear and Greed Index"
authors = ["Didier Rodrigues Lopes <dro.lopes@campus.fct.unl.pt>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/DidierRLopes/fear-greed-index"

[tool.poetry.dependencies]
python = ">=3.7"
requests = "^2.25.1"
bs4 = "^0.0.1"
matplotlib = "^3.3.4"
lxml = "^4.6.5"
Pillow = "^9.0.0"

[tool.poetry.dev-dependencies]
Sphinx = "^4.0.2"
sphinx-rtd-theme = "^0.5.2"
m2r2 = "^0.2.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
